--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "slidev-theme-tokyo-python",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Theme for Tokyo Python Meetup",
   "main": "index.js",
   "files": [
@@ -22,7 +22,7 @@
   "license": "ISC",
   "slidev": {
     "theme": {
-      "colorSchema": "dark",
+      "colorSchema": "light",
       "highlighter": "prism"
     }
   },
